@@ -4,6 +4,9 @@ Changelog
 1.5.2 - Unreleased
 ------------------
 
+- Fix zimbra mail not to break on emails w/o body and subject.
+  [Vitaliy Podoba]
+
 - Refresh Zimbra SOAP API call auth token when expired.
   [Vitaliy Podoba]
 
